results/SVCOMP/conversational/log-instanceof3-2024_03_13_18_51_37.txt
class Main {
    //@ requires args != null;
    //@ ensures \result == (args instanceof Object[]);
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires args != null;
                 ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (args instanceof Object[]);
                            ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
    //@ requires args != null;
    //@ ensures \result == (args instanceof Object[]);
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires args != null;
                 ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (args instanceof Object[]);
                            ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
    //@ requires \typeof(args) == \type(Object[]);
    //@ ensures \result == (\typeof(args) == \type(Object[]));
    public static boolean f() {
        return args instanceof Object[];
    }
}
/home/max/Documents/JMLGPT/tmp/instanceof3.java:2: error: cannot find symbol
    //@ requires \typeof(args) == \type(Object[]);
                         ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:3: error: cannot find symbol
    //@ ensures \result == (\typeof(args) == \type(Object[]));
                                    ^
  symbol:   variable args
  location: class Main
/home/max/Documents/JMLGPT/tmp/instanceof3.java:5: error: cannot find symbol
        return args instanceof Object[];
               ^
  symbol:   variable args
  location: class Main
3 errors

class Main {
    //@ requires args != null;
    //@ ensures \result == (args instanceof Object[]);
    public static boolean f(Object[] args) {
        return args instanceof Object[];
    }
}

